fixed scrolling on mobile

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1133,6 +1133,10 @@ html {
     text-align: center;
 }
 
+#Grow-List-Main-Area {
+    max-height: 100%;
+}
+
 #Grow-Box-Area-Scroll {
     height: 100%;
     overflow-y: auto;
@@ -1392,6 +1396,7 @@ html {
     flex-wrap: wrap;
     width: 100%;
     height: 100%;
+    overflow-y: auto;
 }
 
 .Grow-Details-Page-Panel {
@@ -1406,12 +1411,14 @@ html {
     flex: 5;
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
     min-width: 50vw;
 }
 
 .Grow-Details-Content-Cam {
     flex: 1;
     min-width: 65vw;
+    max-height: 75vh;
 }
 
 .Grow-Details-Header {
@@ -1422,7 +1429,8 @@ html {
 }
 
 .Grow-Details-Content-Bottom {
-    min-height: 35vh;
+    min-height: 300px;
+    min-width: 100vw;
     width: 100%;
     background-color: #FFF;
     flex: 1;
@@ -1442,6 +1450,7 @@ html {
     flex-direction: row;
     flex-wrap: wrap;
     max-height: 64vh;
+    flex: 1;
 }
 
 .Grow-Details-Main-Btns {
@@ -1500,3 +1509,4 @@ html {
 #GROW-DETAILS-SAVE-CONFIG-BTN:hover {
     background-color: #63ff34;
 }
+
